[package]
name = "quinn-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.0"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
quinn = { package = "iroh-quinn", path = "/home/hsz/Source/iroh-quinn/quinn", default-features = false, features = ["rustls-ring", "runtime-tokio"] }
# quinn = "0.11.9"
rustls = { version = "0.23.35"}
socket2 = "0.5"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
